Kubernetes/06-springexample/k8s/51-user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-db
spec:
  selector:
      matchLabels:
          app: user-service-db
  template:
    metadata:
      labels:
        app: user-service-db
    spec:
      containers:
      - name: user-service-db
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
            - mountPath: /data/db
              name: user-service-db-volume
        readinessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 10
          timeoutSeconds: 1
        livenessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 20
          timeoutSeconds: 1
      volumes:
      - name: user-service-db-volume
        persistentVolumeClaim:
          claimName: user-db-volume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  selector:
      matchLabels:
          app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: user-service:v1
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 3
