Kubernetes/06-springexample/k8s/00-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafkaa
  labels:
    app: kafkaa
spec:
  ports:
    - port: 9092
      name: plaintext
    - port: 9999
      name: jmx
      #clusterIP: None
  selector:
    app: kafkaa
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper-service
  name: zookeeper-service
spec:
  type: NodePort
  ports:
    - name: zookeeper-port
      port: 2181
      # nodePort: 30181
      targetPort: 2181
  selector:
    app: zookeeper
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-db
spec:
  ports:
    - port: 27017
  selector:
    app: order-service-db
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  ports:
    - port: 8080
  selector:
    app: order-service
