Kubernetes/06-springexample/k8s/10-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2" # Note1 at the end of the file
spec:
  rules:
  - host: springexample.minikube.unict.it
    http:
      paths:
      - path: /users(/|$)(.*) # Note1 at the end of the file
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service
            port:
              number: 8080
      - path: /orders(/|$)(.*) # Note1 at the end of the file
        pathType: ImplementationSpecific
        backend:
          service:
            name: order-service
            port:
              number: 8080

# Note1:  See https://kubernetes.github.io/ingress-nginx/examples/rewrite/
